@@ -1,6 +1,7 @@
-AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.45.tar.gz 4476994 BLAKE2B 84bdafe750402dc4315bd35c31c46c5f8c922dea534f25be32319a18d9f4c7343262cf283ea382a99f3a499fe24efce63ceb82bc7a28d6f5abcd645320c1301d SHA512 f1fe7056e811c0943e8f960fdf0283df7501ed712cf5020d609be9b371681fd46d067e1793a311f337e63fdc0090ce659644ae92bcba6ac617746919fb1f7c87
-DIST epson-inkjet-printer-escpr2-1.1.46.tar.gz 4501044 BLAKE2B 4afe797e92b80bb6be0f34339752a80de62f8e06ddd880fce4424ac3f13934fa55b4dab8af7977f196fc9080733296cf00a744b99ca49eeeb23cc5d11bbe0183 SHA512 21d17b9ee27d4c561a733cf17ab6b09419cc1a255ed7d008f9804d23eb789b422d194cccf9dbf9ee09ff8b2c027e4930f1d21a2f1b57bd1b618ad031f16c1e0b
-EBUILD epson-inkjet-printer-escpr2-1.1.45.ebuild 1319 BLAKE2B 44564ccbaa2206b95fb8007b5c38b4e02e11eada3d2d2d5c573f9186b68dc16825403e2e28b179e99568d16fc2b23b2ab351c4c61219190e404ad2b475da7a34 SHA512 c92a8ad3fb839960db4ffe5fad12c1f983625f1d3cd849eb994bec485d207d7fb541b3002a69a070a52e09e5a7936d97985d2c6e305ce558f3c7847ad32ee704
-EBUILD epson-inkjet-printer-escpr2-1.1.46.ebuild 1319 BLAKE2B 6b711596056f4e9ebdff0212474b46c4f7fb59a0b479ad8630359b2290698c7d07f032878ef51ea6f5e28fa362e36c05f965a5786c9afc5198b19ca5a195f2ca SHA512 32656868e988cf1f376728f95a10fb1c52438b1b6cf313830521cf1111038fd9b701c2a44298ef27ea0066153ed9c875924b462d63ce4c21649edf7b911dd011
-MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
+DIST epson-inkjet-printer-escpr2-1.1.46-1lsb3.2.i486.rpm 3196998 BLAKE2B de09c0b0bdaf20e7fe5aa203e6993758bacf625a641c9aa815ebd5b71e5b7c62d6a047c6789a11d7598f07f8fa264c6ed685d31a1794a282e8a7e421f564e359 SHA512 2841e72cf49d74b12b2e40828771a1d4ad6b8d074ba3c6d9824d5425b9ec6adcf9caf59cf103c0c9f3def1b0c8902b77b8224b0f354573c004d39a332e7b185d
+DIST epson-inkjet-printer-escpr2-1.1.46-1lsb3.2.x86_64.rpm 3196527 BLAKE2B bb55fd896d99d26e5d85b2ce53d5e3e1bd27bb91942d1b1806b4bd9af8ac73e9cd64ebee0d3b2b4dc5eaae5cdcda0fb648e96650ac1992c0bbe435c057173e3c SHA512 9b9b36924ad7de932155426c55188c4c39d582410249b9eb2fd1e961b0121504900c559592a604dc72e21ab9c91bdc96c088c75cf641778c0c10acd62148d829
+DIST epson-inkjet-printer-escpr2-1.1.47-1lsb3.2.i486.rpm 3343039 BLAKE2B 3059b7093904d45140a20ab54408879a75bbff3e0d3b402b02eaf0998aeacfbd5c76984ea8cb2df58cc6057f390b9740416e132bcebe75da26729887556f2265 SHA512 771bf43db3026b7de9c3b031f3d59aeeee852664ce818df26f37681e5ddbd2edde6ca2fbb901a735e7d45827dd55d788103a9f542c8fca4ae78382ca98005f61
+DIST epson-inkjet-printer-escpr2-1.1.47-1lsb3.2.x86_64.rpm 3342447 BLAKE2B fc100ed64011151f6a8b9fa0d44633c8c432bec9af5ce2448dccc89e73b3da5bc81908d2ff7a6f4d1899f3f73951a9433e84b03c21304772333afea00b2b7897 SHA512 732011f15439fef60af917252baf2bf4dcf04aafcbfe3044aa794d84488bc0c18afc36484483150c0abf3f73ce36c57a9c5ed27177518bba28f42efdafdc2f26
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.46.ebuild 1670 BLAKE2B 8d7bc30de763febc15ee8eb2d7791733977340eff3b0ecc3f3ee66183cd0dd0de12e45de96a0c369d1b647e0733d04e823d0e1f7494fb11944b38603d90a5252 SHA512 36266ec8ca4985119c20d0f48d0367092b86b3ff73be60f124687ed6f4ddb4f748e9bc93a7cc7907b88ad9d9df97b8d3032af7c4f3e520852b10d851266412c2
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.47.ebuild 1670 BLAKE2B f1a30027ae300165327ba79361c84ef39a9a2587d6eaa2bbdcfd3a2a22eece2ad50051389f774f2c880f1a502be602148f6bf12cbe2def5d14966e6bbcbb2598 SHA512 6997485b5a3287319b4edc79524b65824726cf2503d77b9e15dc2c186ff09268cc0fb7569e1217a775d618de621c843e0910f304647ca78d9279c56cc80dfae8
+MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
